--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="#connect">Connect</a></li>
+                        <li class="nav-item"><a class="nav-link" style="top: 250px" href="#connect">Connect</a></li>
                         <li class="nav-item"><a class="nav-link" href="#pray">Pray</a></li>
                         <li class="nav-item"><a class="nav-link" href="#history">History</a></li>
                     </ul>
@@ -52,7 +52,7 @@
         </header>
         <!-- Signup-->
         <!--section#connect.signup-section(style='margin-bottom:0rem; padding: 2rem; text-align: center;')-->
-        <section class="projects-section bg-light" id="connect" style="margin-bottom: 0rem; padding: 2rem; text-align: center">
+        <section class="projects-section bg-light" id="connect" style="margin-bottom: 0rem; padding: 2rem; text-align: center; padding-top: 40px; margin-top: -40px">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 justify-content-center">
