cropping and deduping

--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
                         <h2 style="color: white">Pray</h2>
                         <p class="text-white-80 mb-0" style="font-size: 150%; color: white">
                             <br />
+                            <br />
                             "O God, grant that at least one of our sons may become a priest or religious brother, and one of our daughters a religious sister. We ourselves want to live as good Christians, and to guide our children always to do what is right, so that we may receive the grace, O God, to be allowed to give Thee a holy priest, brother, or sister! Amen."
+                            <br />
                             <br />
                             (Our Father, Hail Mary and Glory Be)
                         </p>
@@ -108,7 +110,7 @@
                     <div class="col-lg-8">
                         <p class="text-white-50" style="margin-bottom: 1rem">
                             <br />
-                            Under the direction of their parish priest, Msgr. Alessandro Canora, they gathered every Tuesday for adoration of the Blessed Sacrament, asking the Lord for vocations. They received Holy Communion on the first Sunday of every month with the same intention. After Mass, all the mothers prayed a particular prayer together imploring for vocations to the priesthood. Through the trusting prayer of these mothers and the openness of the other parents, an atmosphere of deep joy and Christian piety developed in the families, making it much easier for the children to recognize their vocations."
+                            Under the direction of their parish priest, Msgr. Alessandro Canora, they gathered every Tuesday for adoration of the Blessed Sacrament, asking the Lord for vocations. They received Holy Communion on the first Sunday of every month with the same intention. After Mass, all the mothers prayed a particular prayer together imploring for vocations to the priesthood.
                             <br />
                             <br />
                             Through the trusting prayer of these mothers and the openness of the other parents, an atmosphere of deep joy and Christian piety developed in the families, making it much easier for the children to recognize their vocations."
@@ -154,6 +156,12 @@
                             <br />
                             <br />
                             Every ten years, the priests and sisters born in Lu come together from all around the world. Fr. Mario Meda, the long-serving parish priest of Lu, explained that this reunion is a true celebration, a feast of thanksgiving to God who has done such great things for Lu."
+                            <br />
+                            <br />
+                            The prayer that the mothers of Lu prayed was short, simple, and deep:
+                            <br />
+                            <br />
+                            <i>“O God, grant that one of my sons may become a priest! I myself want to live as a good Christian and want to guide my children always to do what is right, so that I may receive the grace, O God, to be allowed to give you a holy priest! Amen.”</i>
                             <br />
                             <br />
                             <i>
