--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
                             <br />
                             <br />
                             <i>
-                                NOTE: The above section is an html copy of a pdf version credited
-                                <a href="https://d2y1pz2y630308.cloudfront.net/1053/documents/The%20story%20of%20the%20mothers%20of%20Lu.pdf">here.</a>
+                                NOTE: The above info comes from pages 18 and 19 of
+                                <a href="https://www.catholicculture.org/culture/library/specialitems/adoration_for_priests.pdf">this pdf</a>
                             </i>
                         </p>
                     </div>
